Moved design-style.css and recent-posts-widget css to css/; fixed cropping issue with images

--- a/css/design-style.css
+++ b/css/design-style.css
@@ -331,21 +331,6 @@ a#doorway-link:hover {
 	text-decoration: none;
 }
 
-/*recent posts*/
-#recent-posts {
-	margin: 0 auto;
-	float: none;
-}
-#recent-posts .title h2 {
-	color: #000000 !important;
-}
-
-#recent-posts-section {
-	/*border: 3px solid #020016;*/
-	margin: 2px;
-	padding: 15px 0 5px;
-}
-
 .widget-doorway-bottom {
 	padding: 0 5px;
 }
@@ -370,30 +355,6 @@ a#doorway-link:hover {
 	font-size: 12px;
 	text-align: right;
 	display: block;
-}
-
-ul#recent-posts-items .list {
-	padding: 0 20px 0;
-	/*border-right: 1px solid #d1aa67;*/
-	border-right: 1px solid;
-}
-
-ul#recent-posts-items .list:last-child {
-	border: 0;
-}
-
-a.view-all {
-	display: block;
-	font-size: 12px;
-	font-weight: bold;
-}
-
-img.recent-posts-img {
-	/* -moz-border-radius: 50%;
-	-webkit-border-radius: 50%;
-	border-radius: 50%; /* future proofing */
-	/*-khtml-border-radius: 50%;  for old Konqueror browsers */
-	margin-bottom: 10px;
 }
 
 /*header*/
@@ -1191,31 +1152,6 @@ ul.products .product-category-gold-img-section {
 	}
 	#inner-wrapper {
 		padding: 0;
-	}
-}
-@media only screen and (max-width: 800px) {
-	.widget-doorway-bottom h5.title {
-		font-size: 15px;
-		line-height: 1.1;
-	}
-	ul#recent-posts-items .list {
-		padding: 0 15px 0;
-	}
-	div#doorway-button-sidebar-container .medium-8 {
-		padding-left: 0;
-	}
-	div#doorway-button-sidebar-container .medium-4 {
-		padding-right: 0;
-	}
-}
-
-@media only screen and (max-width: 740px) {
-	#recent-posts .medium-block-grid-3 > li {
-		width: 100%;
-	}
-	ul#recent-posts-items .list {
-		border: 0;
-		padding: 0 30px 0;
 	}
 }
 
